Bug:  PRD Reviewer:  Self Comments:  Changes for Filr 1.1 development.  {166th} 1. Reworked the Veiw Details header sizing change I did yesterday so    that I can keep word wrap for file names that can wrap (vs.    truncation.) 2. Restructured some HTML generation in the View Details header to use    SafeHtmlTemplates instead of just strings.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/FolderEntryComposite.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/FolderEntryHeader.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtFolderEntryView.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtFolderEntryView.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtFolderEntryView.css
@@ -23,7 +23,7 @@
 		.vibe-feView-headerContentPath                {color: #505354; padding-top: 5px; font-size: 13px; line-height: 16px; display: block;}
 		.vibe-feView-headerContentTitleAsAnchor       {display: inline-block; cursor: pointer; text-decoration: none;}
 		.vibe-feView-headerContentTitleAsAnchor:hover {color: #135c8f !important; cursor: pointer; background: url(images/blends/teal_slice.png) repeat-x; background-position:center; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px; padding: 2px;}
-		.vibe-feView-headerContentTitleAsLabel        {display: inline-block; text-overflow: ellipsis; overflow: hidden; font-size: 1.2em; white-space: nowrap;}
+		.vibe-feView-headerContentTitleAsLabel        {display: inline-block; text-overflow: ellipsis; overflow: hidden; font-size: 1.2em;}
 		.vibe-feView-headerContentTitleFileSize       {color: #666666; padding-left: 12px; font-size: 13px; vertical-align: top;}
 		.vibe-feView-headerContentTitleMarkRead       {cursor: pointer; padding-right: 3px;}
 		.vibe-feView-headerContentTitlePanel          {display: inline-block;}
